-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: openjdk8u432
-
Component/s: hotspot
-
b01
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8336576 | openjdk8u422 | Francisco Ferrari Bihurriet | P4 | Resolved | Fixed | b05 |
| JDK-8360766 | shenandoah8u432 | Francisco Ferrari Bihurriet | P4 | Resolved | Fixed | b01 |
| JDK-8360734 | shenandoah8u422 | Francisco Ferrari Bihurriet | P4 | Resolved | Fixed | b05 |
As noted by [~rmarchenko] [1], the 8u backport of JDK-8303466, JDK-8335472, has been integrated with incorrect signatures for MaxLNode::Identity, MinLNode::Identity and ConvI2LNode::Identity.
This would have been caught by GitHub Actions in 11u, 17u and 21u repositories that haveJDK-8152666, where the -Woverloaded-virtual [2] GCC compile flag was added. NOTE: warnings are treated as errors by default, and GitHub Actions execute configure without passing --disable-warnings-as-errors.
[1] https://github.com/openjdk/jdk8u-dev/pull/529#discussion_r1661486052
[2] https://gcc.gnu.org/onlinedocs/gcc-14.1.0/gcc/C_002b_002b-Dialect-Options.html#index-Wno-overloaded-virtual
This would have been caught by GitHub Actions in 11u, 17u and 21u repositories that have
[1] https://github.com/openjdk/jdk8u-dev/pull/529#discussion_r1661486052
[2] https://gcc.gnu.org/onlinedocs/gcc-14.1.0/gcc/C_002b_002b-Dialect-Options.html#index-Wno-overloaded-virtual
- backported by
-
JDK-8336576 [8u] JDK-8303466 backport to 8u requires 3 ::Identity signature fixes
-
- Resolved
-
-
JDK-8360734 [8u] JDK-8303466 backport to 8u requires 3 ::Identity signature fixes
-
- Resolved
-
-
JDK-8360766 [8u] JDK-8303466 backport to 8u requires 3 ::Identity signature fixes
-
- Resolved
-
- relates to
-
JDK-8303466 C2: failed: malformed control flow. Limit type made precise with MaxL/MinL
-
- Resolved
-
- links to
-
Commit
openjdk/jdk8u-dev/16ea85b5
-
Review(master)
openjdk/jdk8u-dev/532
(1 links to)