8335552: [8u] JDK-8303466 backport to 8u requires 3 ::Identity signature fixes

Reviewed-by: mbalao, roland, andrew